package at.fhj.msd.swdesign.observer;

public interface Observer {

    void update();
}
